--- a/app/src/main/res/layout/player_details_activity.xml
+++ b/app/src/main/res/layout/player_details_activity.xml
@@ -3,21 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:titleTextColor="@android:color/white" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/player_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:tabTextAppearance="@style/AppTabTextAppearance" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/player_pager"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:paddingTop="46dp">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/player_tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            app:tabTextAppearance="@style/AppTabTextAppearance" />
-    </androidx.viewpager.widget.ViewPager>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
