--- a/app/src/main/res/layout/layout_games_fragment.xml
+++ b/app/src/main/res/layout/layout_games_fragment.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F5F7FA"
     android:layoutDirection="ltr"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
@@ -26,28 +26,28 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <!-- New Game FAB -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/games_list_make_teams"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/fui_transparent"
-        android:gravity="start|center_vertical">
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="24dp"
+        android:elevation="6dp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="12dp"
+        android:text="@string/new_game"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:theme="@style/Theme.MaterialComponents.Light"
+        app:cornerRadius="28dp"
+        app:icon="@drawable/make_teams_icon"
+        app:iconPadding="8dp"
+        app:iconTint="@android:color/white" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/games_list_make_teams"
-            style="@style/Widget.MaterialComponents.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/new_game"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:theme="@style/Theme.MaterialComponents.Light"
-            app:cornerRadius="25dp"
-            app:icon="@drawable/make_teams_icon" />
-
-    </LinearLayout>
 </RelativeLayout>
