--- a/app/src/main/res/layout/layout_players_fragment.xml
+++ b/app/src/main/res/layout/layout_players_fragment.xml
@@ -3,48 +3,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F5F7FA"
     android:layoutDirection="ltr"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    <!-- Header Row -->
     <include
         android:id="@+id/player_titles"
         layout="@layout/player_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="8dp" />
+
+    <View
+        android:id="@+id/header_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/player_titles"
+        android:background="#E0E0E0" />
 
     <ListView
         android:id="@+id/players_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/player_titles"
+        android:layout_below="@id/header_divider"
         android:clipToPadding="false"
+        android:divider="#E0E0E0"
+        android:dividerHeight="1dp"
         android:paddingBottom="100dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <!-- Make Teams FAB -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/main_make_teams"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/fui_transparent"
-        android:gravity="start|center_vertical">
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="24dp"
+        android:elevation="6dp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="12dp"
+        android:text="@string/make_teams"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:theme="@style/Theme.MaterialComponents.Light"
+        app:cornerRadius="28dp"
+        app:icon="@drawable/make_teams_icon"
+        app:iconPadding="8dp"
+        app:iconTint="@android:color/white" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/main_make_teams"
-            style="@style/Widget.MaterialComponents.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/make_teams"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:theme="@style/Theme.MaterialComponents.Light"
-            app:cornerRadius="25dp"
-            app:icon="@drawable/make_teams_icon" />
-
-    </LinearLayout>
 </RelativeLayout>
