--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -1,84 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="42dp"
+    android:layout_height="44dp"
+    android:background="?attr/selectableItemBackground"
     android:gravity="center_vertical"
     android:layoutDirection="ltr"
     android:orientation="horizontal"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="5dp">
+    android:paddingStart="8dp"
+    android:paddingTop="6dp"
+    android:paddingEnd="8dp"
+    android:paddingBottom="6dp">
 
+    <!-- Attendance Section -->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="48dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="5dp">
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/player_rsvp_title"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:paddingEnd="10dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="6dp"
             android:src="@drawable/attendance"
-            android:textAppearance="@style/regularText"
             android:visibility="gone" />
 
         <CheckBox
             android:id="@+id/player_coming"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:checked="false"
             android:focusable="false"
-            android:padding="7dp"
-            android:paddingEnd="10dp"
-            android:textColor="@android:color/black" />
+            android:minWidth="0dp"
+            android:minHeight="0dp" />
     </LinearLayout>
 
+    <!-- Grade -->
     <TextView
         android:id="@+id/player_grade"
-        android:layout_width="40dp"
+        android:layout_width="44dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="6dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center_vertical"
-        android:textAppearance="@style/regularText" />
+        android:textColor="#37474F"
+        android:textSize="13sp" />
 
+    <!-- Recent Performance Indicator -->
     <ImageView
         android:id="@+id/player_recent_performance"
         android:layout_width="20dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="9dp"
-        android:gravity="center_vertical|end" />
+        android:layout_height="20dp"
+        android:layout_marginEnd="8dp" />
 
+    <!-- Attributes/Properties -->
     <TextView
         android:id="@+id/player_attributes"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
+        android:layout_marginEnd="6dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:textAppearance="@style/regularText" />
+        android:textColor="#546E7A"
+        android:textSize="12sp" />
 
+    <!-- Age -->
     <TextView
         android:id="@+id/player_age"
-        android:layout_width="30dp"
+        android:layout_width="28dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center_vertical"
-        android:textAppearance="@style/regularText" />
+        android:textColor="#78909C"
+        android:textSize="12sp" />
 
+    <!-- Player Name -->
     <TextView
         android:id="@+id/player_name"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:ellipsize="end"
         android:gravity="right|center_vertical"
-        android:paddingRight="3dp"
-        android:textAppearance="@style/regularText" />
+        android:maxLines="1"
+        android:paddingEnd="4dp"
+        android:textAlignment="viewEnd"
+        android:textColor="#263238"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
