--- a/app/src/main/res/layout/player_team_item.xml
+++ b/app/src/main/res/layout/player_team_item.xml
@@ -2,130 +2,165 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="3dp"
+    android:background="@drawable/bg_player_item"
+    android:elevation="1dp"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
     android:layoutDirection="ltr"
-    android:paddingBottom="5dp"
-    android:paddingLeft="3dp"
-    android:paddingRight="5dp"
-    android:paddingTop="5dp">
+    android:orientation="horizontal"
+    android:paddingStart="6dp"
+    android:paddingTop="5dp"
+    android:paddingEnd="6dp"
+    android:paddingBottom="5dp">
 
+    <!-- Player Grade Badge -->
     <TextView
         android:id="@+id/player_team_grade"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/circle_grade_neutral"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="10sp"
+        android:textStyle="bold" />
+
+    <!-- Result Indicators -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="3dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="14sp" />
+        android:layout_marginEnd="3dp"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/res_1"
+        <ImageView
+            android:id="@+id/res_1"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="1dp"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/res_2"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="1dp"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/res_3"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="1dp"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/res_4"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="1dp"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/res_5"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"
+            android:visibility="gone" />
+    </LinearLayout>
+
+    <!-- Position Tags (compact) -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left|center_vertical"
-        android:padding="1dp"
-        android:visibility="gone" />
+        android:layout_marginEnd="3dp"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/res_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left|center_vertical"
-        android:padding="1dp"
-        android:visibility="gone" />
+        <TextView
+            android:id="@+id/player_gk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="1dp"
+            android:background="#4CAF50"
+            android:paddingHorizontal="2dp"
+            android:text="GK"
+            android:textColor="@android:color/white"
+            android:textSize="7sp"
+            android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/res_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left|center_vertical"
-        android:padding="1dp"
-        android:visibility="gone" />
+        <TextView
+            android:id="@+id/player_d"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="1dp"
+            android:background="#2196F3"
+            android:paddingHorizontal="2dp"
+            android:text="D"
+            android:textColor="@android:color/white"
+            android:textSize="7sp"
+            android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/res_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left|center_vertical"
-        android:padding="1dp"
-        android:visibility="gone" />
+        <TextView
+            android:id="@+id/player_pm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="1dp"
+            android:background="#FF9800"
+            android:paddingHorizontal="2dp"
+            android:text="PM"
+            android:textColor="@android:color/white"
+            android:textSize="7sp"
+            android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/res_5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left|center_vertical"
-        android:padding="1dp"
-        android:visibility="gone" />
+        <TextView
+            android:id="@+id/player_breaking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="1dp"
+            android:background="#E91E63"
+            android:paddingHorizontal="2dp"
+            android:text="B"
+            android:textColor="@android:color/white"
+            android:textSize="7sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/player_gk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:text="GK"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="8sp" />
+        <TextView
+            android:id="@+id/player_extra"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#9C27B0"
+            android:paddingHorizontal="2dp"
+            android:text="E"
+            android:textColor="@android:color/white"
+            android:textSize="7sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/player_d"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:text="D"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="8sp" />
-
-    <TextView
-        android:id="@+id/player_pm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:text="PM"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="8sp" />
-
-    <TextView
-        android:id="@+id/player_breaking"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:text="B"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="8sp" />
-
-    <TextView
-        android:id="@+id/player_extra"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:text="E"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="8sp" />
-
+    <!-- Player Name -->
     <TextView
         android:id="@+id/player_team_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="right"
-        android:paddingRight="3dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="14sp" />
+        android:ellipsize="end"
+        android:gravity="right|center_vertical"
+        android:maxLines="1"
+        android:paddingEnd="2dp"
+        android:textAlignment="viewEnd"
+        android:textColor="#37474F"
+        android:textSize="13sp"
+        android:textStyle="bold" />
 
+    <!-- MVP Trophy -->
     <ImageView
         android:id="@+id/player_mvp_trophy"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginStart="2dp"
         android:src="@drawable/trophy_better"
         android:visibility="gone" />
 
