--- a/app/src/main/res/layout/layout_make_teams_activity.xml
+++ b/app/src/main/res/layout/layout_make_teams_activity.xml
@@ -397,7 +397,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_action_button"
-                    android:drawableTop="@drawable/ic_shuffle_modern"
+                    android:drawableTop="@drawable/ic_action_shuffle"
                     android:drawablePadding="4dp"
                     android:gravity="center"
                     android:minHeight="72dp"
@@ -422,7 +422,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="?attr/selectableItemBackground"
-                    android:drawableStart="@drawable/ic_more_modern"
+                    android:drawableStart="@drawable/ic_action_more"
                     android:gravity="center"
                     android:minHeight="72dp"
                     android:paddingStart="6dp" />
@@ -452,7 +452,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_action_button"
-                    android:drawableTop="@drawable/ic_swap_modern"
+                    android:drawableTop="@drawable/ic_action_swap"
                     android:drawablePadding="4dp"
                     android:gravity="center"
                     android:minHeight="72dp"
@@ -477,7 +477,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="?attr/selectableItemBackground"
-                    android:drawableStart="@drawable/ic_more_modern"
+                    android:drawableStart="@drawable/ic_action_more"
                     android:gravity="center"
                     android:minHeight="72dp"
                     android:paddingStart="6dp" />
@@ -506,7 +506,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_action_button_primary"
-                    android:drawableTop="@drawable/ic_save_modern"
+                    android:drawableTop="@drawable/ic_action_save"
                     android:drawablePadding="4dp"
                     android:gravity="center"
                     android:minHeight="72dp"
