Chemistry chart - show all players, highlight connected dot, navigate to selected player

--- a/app/src/main/res/layout/fragment_player_collaboration_chart.xml
+++ b/app/src/main/res/layout/fragment_player_collaboration_chart.xml
@@ -45,7 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:textSize="14sp"
-            android:textColor="#555555" />
+            android:textColor="#555555"
+            android:minLines="2" />
 
     </LinearLayout>
 
