vector based resources

--- a/app/src/main/res/layout/game_details_child_item.xml
+++ b/app/src/main/res/layout/game_details_child_item.xml
@@ -37,7 +37,8 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingHorizontal="12dp"
-        android:paddingVertical="8dp">
+        android:paddingVertical="8dp"
+        android:theme="@style/Theme.MaterialComponents.Light">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/game_copy_game"
