--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -21,7 +21,9 @@
             android:id="@+id/player_rsvp_title"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginEnd="6dp"
+            android:layout_marginStart="6dp"
             android:src="@drawable/attendance"
             android:visibility="gone" />
 
@@ -42,8 +44,8 @@
         android:layout_width="44dp"
         android:layout_height="match_parent"
         android:layout_marginEnd="8dp"
-        android:gravity="center_vertical"
         android:focusable="false"
+        android:gravity="center_vertical"
         android:textColor="#37474F"
         android:textSize="13sp" />
 
